ch: modified the responsiveness

--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Contact</a></li>
+                      <li><a class="dropdown-item" href="contact.html">Contact</a></li>
                 </ul>
               </div>
             </div>
           </nav>
     </section>
     <section id="loan-section">
-        <img src="" alt="">
     </section>
     <section>
         <div class="Heading">
@@ -36,8 +35,8 @@
         <p>No collateral. We just need details about you and we are good to go !!!</p>
         </div>
     </section>
-    <section>
-        <form class="row g-3 needs-validation" novalidate>
+    <section id="form-section">
+        <form class="row g-3 needs-validation details-section" novalidate>
             <div class="col-md-4">
               <label for="validationCustom01" class="form-label">First name</label>
               <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
