--- a/about.html
+++ b/about.html
@@ -8,19 +8,30 @@
     <title>About</title>
 </head>
 <body>
-    <section id="about-section">
-        <div class="about-section">
-            <h1>Nath Loan</h1>
-        <p>We are here to serve you better than you can imagine. Our aim is to help entrepreneurs achieve incredible things and not be stopped by finance. We have a very large capital base to push your dreams and make them reality.</p>
+    <div class="row g-0 bg-light position-relative">
+        <div class="col-md-6 mb-md-0 p-md-4">
+          <img src="img/loan.jpg" class="w-100" alt="...">
         </div>
-        <div class="vision-section">
-            <h2>Our Vision</h2>
-            <p>To become the best in what we do</p>
+        <div class="col-md-6 p-4 ps-md-0">
+          <h5 class="mt-0">Nath Loan</h5>
+          <p>We have a 24/7 customer support. The first organization to offer such.</p>
         </div>
-        <div class="mission-section">
-            <h3>Our Mission</h3>
-            <p>To achieve incredible things and build the best partnership in Africa</p>
-        </div> 
-    </section>
+      </div>
+      <div class="row g-0 bg-light position-relative">
+        <div class="col-md-6 mb-md-0 p-md-4">
+          <img src="img/mission.jpg" class="w-100" alt="...">
+        </div>
+        <div class="col-md-6 p-4 ps-md-0">
+          <p>To become the best in what we do.</p>
+        </div>
+      </div>
+      <div class="row g-0 bg-light position-relative">
+        <div class="col-md-6 mb-md-0 p-md-4">
+          <img src="img/vision.jpg" class="w-100" alt="...">
+        </div>
+        <div class="col-md-6 p-4 ps-md-0">
+          <p>Provide the best financial support and partnership in Africa.</p>
+        </div>
+      </div>
 </body>
 </html>
