ch: more styling done

--- a/index.html
+++ b/index.html
@@ -32,33 +32,20 @@
       </nav>
     </section>
     <section id="loan-section">
-      <img src="https://bestmarket.com.ng/2022/03/9-best-instant-loan-apps-to-borrow-money-in-united-states/" alt="">
     </section>
     <section id="landing-section">
       <form class="row g-3 needs-validation" novalidate>
         <div class="col-md-4">
           <label for="validationCustom01" class="form-label">First name</label>
           <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
         </div>
         <div class="col-md-4">
           <label for="validationCustom02" class="form-label">Last name</label>
           <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
         </div>
         <div class="col-md-4">
           <label for="validationCustomUsername" class="form-label">Username</label>
-          <div class="input-group has-validation">
-            <span class="input-group-text" id="inputGroupPrepend">@</span>
-            <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-            <div class="invalid-feedback">
-              Please choose a username.
-            </div>
-          </div>
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
         </div>
         <div class="col-md-3">
           <label for="validationCustom04" class="form-label">State</label>
@@ -92,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="col-12" style="font-size: 25px;">
+        <div class="col-12">
           <button class="btn btn-primary" type="submit">Submit form</button>
         </div>
       </form>
