ch: reformed page

--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
               <label for="inputCity" class="form-label">City</label>
               <input type="text" class="form-control" id="inputCity">
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding-left: 270px;">
               <label for="inputState" class="form-label">State</label>
-              <select id="inputState" class="form-select">
+              <select id="inputState" class="form-select" style="height: 25px;">
                 <option selected>Choose your state ...</option>
                 <option>Abuja</option>
                 <option value="">Delta</option>
@@ -47,7 +47,7 @@
               </select>
             </div>
             <div class="col-12 button-section">
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 60px; color: blue">Submit</button>
             </div>
           </form>
     </section>
